FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20230821:
AUTHOR: jhale@FreeBSD.org

  A new uses 'ebur128' has been added to transparently depend on the
  proper variant of 'rust' or 'legacy' depending on the default version
  set by the user.

  Usage:	USES=ebur128:ARGS
  Valid ARGS:	<none>, build, lib, run, test
    <none>:	(default) same as lib
    build:	add BUILD_DEPENDS
    lib:	add LIB_DEPENDS
    run:	add RUN_DEPENDS
    test:	add TEST_DEPENDS

  If you prefer not to use rust, add the following to your make.conf:

	DEFAULT_VERSIONS+=ebur128=legacy

20230728:
AUTHOR: andrew@tao11.riddles.org.uk, fuz@FreeBSD.org

  A new uses 'guile' has been added to transparently depend on the
  proper variant of guile depending on the default version set by the
  user and the demands of the port.

  See Mk/Uses/guile.mk for in-depth documentation.

20230722:
AUTHOR: tcberner@FreeBSD.org

  A new uses 'pycryptography' has been added to transparently depend on the
  proper variant of 'rust' or 'legacy' depending on the default version set
  by the user.

  Supported arguments: <none>,build,run
  Passing no arguments (<none>) is equivalent to passing both build and run.

  Usage:
	USES=pycryptography:build
		-> adds a BUILD_DEPENDS only
	USES=pycryptography:run
		-> adds a RUN_DEPENDS only
	USES=pycryptography:test
		-> adds a TEST_DEPENDS only
	USES=pycryptography:build,run   or   USES=pycryptography
		-> adds a BUILD_ and RUN_DEPENDS

20230712:
AUTHOR: zirias@FreeBSD.org

  USE_GITLAB has been changed to allow fetching by tag name. This was done by
  removing the GL_COMMIT variable and introducing GL_TAGNAME instead.

  Similar to USE_GITHUB/GH_TAGNAME, you can still use a commit hash with