@@ -10,6 +10,13 @@ in the release notes and/or placed into UPDATING.
 
 All ports committers are allowed to commit to this file.
 
+20230823:
+AUTHOR: tcberner@FreeBSD.org
+
+  USES=llvm.mk now supports 'export' (default) and 'noexport' arguments.
+  When export is set, CC, CXX and CPP will be set to the path corresponding
+  to the chosen llvm-version.
+
 20230821:
 AUTHOR: jhale@FreeBSD.org
 
